[issue #170] SceneManager配下とLibrary配下のリファクタリングと修正
- プロジェクトの設定でマクロ再定義を無視するようにした(DirectX11の警告がうるさいので)
- Library配下はT-SENでやってあるコメントブロックを適用した。
- 仮置き関数などを消した
- enumをクラス内に収めた
- 初期化と解放部分の修正
- 変数名とコメントの修正
- InputDeviceManagerの比較がおかしかったので修正
- [pull #81]での指摘部分修正
- Messageboxで出力する文字列を修正

--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
@@ -115,6 +115,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)KingdomCraft\Library;C:\Program Files\Autodesk\FBX\FBX SDK\2016.1\include;$(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <DisableSpecificWarnings>4005;4717;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
