--- a/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
+++ b/src/KingdomCraft/KingdomCraft/KingdomCraft.vcxproj
@@ -26,7 +26,14 @@
     <ClCompile Include="Main\Main.cpp" />
     <ClCompile Include="Main\SceneManager\SceneFactory\SceneFactory.cpp" />
     <ClCompile Include="Main\SceneManager\SceneManager.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\EventManager\EventListener\EventListener.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\EventManager\EventManager.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\EventManager\Event\Event.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\GameData\GameData.cpp" />
     <ClCompile Include="Main\SceneManager\Scene\GameScene\GameScene.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\ObjectManager\GamaObjectManager\GameObjectManager.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\ObjectManager\ObjectManager.cpp" />
+    <ClCompile Include="Main\SceneManager\Scene\GameScene\ObjectManager\UIManager\UIManager.cpp" />
     <ClCompile Include="Main\SceneManager\Scene\Scene.cpp" />
     <ClCompile Include="Main\SceneManager\Scene\TitleScene\TitleBackground\TitleBackground.cpp" />
     <ClCompile Include="Main\SceneManager\Scene\TitleScene\TitleLogo\TitleLogo.cpp" />
@@ -50,7 +57,14 @@
     <ClInclude Include="Library\InputDeviceManager\KeyDevice\KeyDevice.h" />
     <ClInclude Include="Library\InputDeviceManager\MouseDevice\MouseDevice.h" />
     <ClInclude Include="Main\SceneManager\SceneManager.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\EventManager\EventListener\EventListener.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\EventManager\EventManager.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\EventManager\Event\Event.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\GameData\GameData.h" />
     <ClInclude Include="Main\SceneManager\Scene\GameScene\GameScene.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\ObjectManager\GamaObjectManager\GameObjectManager.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\ObjectManager\ObjectManager.h" />
+    <ClInclude Include="Main\SceneManager\Scene\GameScene\ObjectManager\UIManager\UIManager.h" />
     <ClInclude Include="Main\SceneManager\Scene\Scene.h" />
     <ClInclude Include="Main\SceneManager\Scene\TitleScene\TitleBackground\TitleBackground.h" />
     <ClInclude Include="Main\SceneManager\Scene\TitleScene\TitleLogo\TitleLogo.h" />
